--- a/introduction/04.kylin-k8s-install.md
+++ b/introduction/04.kylin-k8s-install.md
@@ -6,11 +6,6 @@ sed -i "s/\/dev\/mapper\/centos-swap/\##\/dev\/mapper\/centos-swap/g" /etc/fstab
 systemctl daemon-reload
 ```
 
-## XXXXXX
-```
-
-```
-
 ## 设置时间同步
 ```
 timedatectl set-timezone Asia/Shanghai
@@ -40,7 +35,7 @@ EOF
 
 ## 安装docker
 ```
-
+通过离线方式安装
 ```
 
 ## 配置 Docker daemon，设置cgroupdriver为systemd
@@ -62,8 +57,6 @@ vim /etc/docker/daemon.json
 ## 重启 docker 后台服务
 ```
 sudo systemctl daemon-reload
-
-
 sudo systemctl enable docker
 sudo systemctl restart docker
 sudo systemctl status docker
@@ -75,7 +68,7 @@ docker load -i xxxxxxx.tar
 ```
 
 
-## 导入deb
+## 导入kubeadm、kubelet、kubectl的deb
 ```
 dpkg -i xxxx.deb
 ```
@@ -83,8 +76,6 @@ dpkg -i xxxx.deb
 ## 重启 kubelet 后台服务
 ```
 sudo systemctl daemon-reload
-
-
 sudo systemctl enable kubelet
 sudo systemctl restart kubelet
 sudo systemctl status kubelet
