--- a/introduction/04.kylin-k8s-install.md
+++ b/introduction/04.kylin-k8s-install.md
@@ -66,13 +66,35 @@ sudo systemctl status docker
 ```
 docker load -i xxxxxxx.tar
 ```
-
-
-## 导入kubeadm、kubelet、kubectl的deb
+## kubeadm导入、kubelet、kubectl的deb
+> 可以使用导入的方式
 ```
 dpkg -i xxxx.deb
 ```
-
+> 或者通过阿里云镜像站下载安装；
+```
+curl https://mirrors.aliyun.com/kubernetes/apt/doc/apt-key.gpg | apt-key add - 
+cat << EOF | sudo tee /etc/apt/sources.list.d/kubernetes.list
+deb https://mirrors.aliyun.com/kubernetes/apt/ kubernetes-xenial main
+EOF
+apt-get update
+apt-cache show kubeadm | grep Version
+```
+> 或者通过官方仓库
+```
+sudo curl -fsSLo /usr/share/keyrings/kubernetes-archive-keyring.gpg https://packages.cloud.google.com/apt/doc/apt-key.gpg
+echo "deb [signed-by=/usr/share/keyrings/kubernetes-archive-keyring.gpg] https://apt.kubernetes.io/ kubernetes-xenial main" | sudo tee /etc/apt/sources.list.d/kubernetes.list
+sudo apt-get update
+apt-cache show kubeadm | grep Version
+```
+> 然后可直接安装
+```
+export K8S_VERSION=1.23.5-00
+apt-get install kubelet=${K8S_VERSION} 
+apt-get install kubeadm=${K8S_VERSION} 
+apt-get install kubectl=${K8S_VERSION}
+sudo apt-mark hold kubelet kubeadm kubectl
+```
 ## 重启 kubelet 后台服务
 ```
 sudo systemctl daemon-reload
@@ -80,7 +102,6 @@ sudo systemctl enable kubelet
 sudo systemctl restart kubelet
 sudo systemctl status kubelet
 ```
-
 ## 初始化集群,在主节点执行
 ```
 kubeadm init \
