add apt kubeadm

--- a/introduction/04.kylin-k8s-install.md
+++ b/introduction/04.kylin-k8s-install.md
@@ -71,7 +71,7 @@ docker load -i xxxxxxx.tar
 ```
 dpkg -i xxxx.deb
 ```
-> 或者通过阿里云镜像站下载安装；
+> 添加阿里云镜像源
 ```
 curl https://mirrors.aliyun.com/kubernetes/apt/doc/apt-key.gpg | apt-key add - 
 cat << EOF | sudo tee /etc/apt/sources.list.d/kubernetes.list
@@ -80,14 +80,14 @@ EOF
 apt-get update
 apt-cache show kubeadm | grep Version
 ```
-> 或者通过官方仓库
+> 添加官方仓库源
 ```
 sudo curl -fsSLo /usr/share/keyrings/kubernetes-archive-keyring.gpg https://packages.cloud.google.com/apt/doc/apt-key.gpg
 echo "deb [signed-by=/usr/share/keyrings/kubernetes-archive-keyring.gpg] https://apt.kubernetes.io/ kubernetes-xenial main" | sudo tee /etc/apt/sources.list.d/kubernetes.list
 sudo apt-get update
 apt-cache show kubeadm | grep Version
 ```
-> 然后可直接安装
+> 然后可使用所需的版本号直接安装
 ```
 export K8S_VERSION=1.23.5-00
 apt-get install kubelet=${K8S_VERSION} 
