--- a/introduction/04.kylin-k8s-install.md
+++ b/introduction/04.kylin-k8s-install.md
@@ -66,12 +66,12 @@ sudo systemctl status docker
 ```
 docker load -i xxxxxxx.tar
 ```
-## kubeadm导入、kubelet、kubectl的deb
-> 可以使用导入的方式
+## kubeadm、kubelet、kubectl的安装
+> 方法一：可以使用离线导入的方式
 ```
 dpkg -i xxxx.deb
 ```
-> 添加阿里云镜像源
+> 方法二：添加阿里云镜像源
 ```
 curl https://mirrors.aliyun.com/kubernetes/apt/doc/apt-key.gpg | apt-key add - 
 cat << EOF | sudo tee /etc/apt/sources.list.d/kubernetes.list
@@ -80,7 +80,7 @@ EOF
 apt-get update
 apt-cache show kubeadm | grep Version
 ```
-> 添加官方仓库源
+> 方法三：添加官方仓库源
 ```
 sudo curl -fsSLo /usr/share/keyrings/kubernetes-archive-keyring.gpg https://packages.cloud.google.com/apt/doc/apt-key.gpg
 echo "deb [signed-by=/usr/share/keyrings/kubernetes-archive-keyring.gpg] https://apt.kubernetes.io/ kubernetes-xenial main" | sudo tee /etc/apt/sources.list.d/kubernetes.list
