--- a/introduction/01.docker install.md
+++ b/introduction/01.docker install.md
@@ -1,12 +1,12 @@
 # install docker 
-
-1.进入docker目录，将目录下的所有文件拷贝至“/usr/bin/”
+## **Offline install**
+> 进入docker目录，将目录下的所有文件拷贝至“/usr/bin/”
 ```
 cd docker/
 cp * /usr/bin/
 ```
 
-2.将docker 作为系统后台服务运
+> 将docker 作为系统后台服务运
 - 新建文件
 ```
 vim /etc/systemd/system/docker.service
@@ -54,8 +54,54 @@ systemctl status docker
 ```
 
 
-3.测试docker
+> 测试docker
 ```
 docker -v
 ```
+## **Online Install**
+### **prepare**
+> Update the apt package index and install packages to allow apt to use a repository over HTTPS
+```
+apt-get update
+sudo apt-get install ca-certificates curl gnupg lsb-release
+```
 
+> Add Docker’s official GPG key
+```
+curl -fsSL https://download.docker.com/linux/debian/gpg | sudo gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg
+```
+
+
+> set up the stable repository
+```
+echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/debian $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+```
+### **Install Docker Engine**
+> Update the apt package index
+```
+sudo apt-get update
+sudo apt-get install docker-ce docker-ce-cli containerd.io
+```
+### **To install a specific version of Docker Engine**
+> List the versions available in your repo
+```
+apt-cache madison docker-ce
+```
+> Install a specific version using the version string from the second column, for example, 5:18.09.1~3-0~debian-stretch
+```
+sudo apt-get install docker-ce=<VERSION_STRING> docker-ce-cli=<VERSION_STRING> containerd.io
+```
+
+## **Verify that Docker Engine is installed correctly by running the hello-world image**
+```
+sudo docker run hello-world
+```
+
+## **New offline Install**
+### **Install from a package**
+> Go to https://download.docker.com/linux/debian/dists/, choose your Debian version, then browse to **pool/stable/**, choose amd64, armhf, or arm64, and download the .deb file for the Docker Engine version you want to install
+
+>Install Docker Engine, changing the path below to the path where you downloaded the Docker package.
+```
+sudo dpkg -i /path/to/package.deb
+```
