--- a/introduction/01.docker install.md
+++ b/introduction/01.docker install.md
@@ -59,7 +59,7 @@ systemctl status docker
 docker -v
 ```
 ## **Online Install**
-### **prepare**
+### **1.prepare**
 > Update the apt package index and install packages to allow apt to use a repository over HTTPS
 ```
 apt-get update
@@ -76,13 +76,13 @@ curl -fsSL https://download.docker.com/linux/debian/gpg | sudo gpg --dearmor -o 
 ```
 echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/debian $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
 ```
-### **Install Docker Engine**
+### **2.Install latest Docker Engine**
 > Update the apt package index
 ```
 sudo apt-get update
 sudo apt-get install docker-ce docker-ce-cli containerd.io
 ```
-### **To install a specific version of Docker Engine**
+### **2.To install a specific version of Docker Engine**
 > List the versions available in your repo
 ```
 apt-cache madison docker-ce
@@ -99,9 +99,9 @@ sudo docker run hello-world
 
 ## **New offline Install**
 ### **Install from a package**
-> Go to https://download.docker.com/linux/debian/dists/, choose your Debian version, then browse to **pool/stable/**, choose amd64, armhf, or arm64, and download the .deb file for the Docker Engine version you want to install
+> 1.Go to https://download.docker.com/linux/debian/dists/, choose your Debian version, then browse to **pool/stable/**, choose amd64, armhf, or arm64, and download the .deb file for the Docker Engine version you want to install
 
->Install Docker Engine, changing the path below to the path where you downloaded the Docker package.
+> 2.Install Docker Engine, changing the path below to the path where you downloaded the Docker package.
 ```
 sudo dpkg -i /path/to/package.deb
 ```
